--- a/assets/i18n/ca.json
+++ b/assets/i18n/ca.json
@@ -1,3 +1,108 @@
 {
-    
+	"customer": "Client/a",
+    "owner": "Propietari/a",
+    "done": "Fet",
+    "update": "Actualitzar",
+    "main_page": "Pàgina principal",
+
+    "app_bar":
+    {
+        "title": "Ajustaments del Compte"
+    },
+
+    "nav_bar":
+    {
+        "restaurants": "Restaurants",
+        "chat": "Xat",
+        "agenda": "Agenda",
+        "profile": "Perfil"
+    },
+
+    "language":
+	{
+		"title": "Idioma",
+        "name": 
+		{
+			"en": "Anglés",
+			"es": "Castellà",
+            "ca": "Català"
+		}
+    },
+
+    "profile_page": 
+    {
+        "dark_mode": "Mode Fosc",
+        "configuration": "CONFIGURACIÓ",
+        "account_settings": 
+        {
+            "title": "Ajustaments del Compte",
+            "sub_title": "Idioma"
+        },
+        "notifications": "Notificacions",
+        "logout": "Tancar Sessió",
+        "delete": "Eliminar Compte"
+    },
+
+    "login_page":
+    {
+        "credentials": "Credencials Incorrectes",
+        "not_found": "Usuari no trobat o contrasenya incorrecta",
+        "username": "Nom d'Usuari",
+        "enter_user": "Introdueixi el seu nom d'usuari",
+        "password": "Contrasenya",
+        "enter_pass": "Introdueixi la seva contrasenya",
+        "fullname": "Nom Complert",
+        "enter_full": "Introdueixi el seu nom complert",
+        "email": "Correu Electrònic",
+        "enter_email": "Introdueixi el seu correu electrònic",
+        "forgot_pass": "No recuerda la seva contrasenya?",
+        "login": "Entrar",
+        "register": "Registrar-se",
+        "new_user": "Nou Usuari? Crear Compte",
+        "create_user": "Crear nou usuari",
+        "new_username": "Nou Usuari",
+        "new_email": "Nou Correu Electrònic",
+        "email_empty": "El camp del correu electrònic no pot estar buit",
+        "email_invalid": "Correu Electrònic Invàlid",
+        "password_match": "Les contrasenyes no coincideixen",
+        "password_repeat": "Repeteixi la contrasenya",
+        "password_again": "Introdueixi la seva contrasenya un altre cop"
+    },
+
+    "dishes_page":
+    {
+        "all": "Tots els plats",
+        "no_dish": "No hi ha plats encara"
+    },
+
+    "restaurants_page":
+    {
+        "filter": "Filtri la seva cerca",
+        "no_match": "Ho setntim, cap restaurant coincideix amb les seves preferències",
+        "no_rest": "Aquest usuari no té restaurants",
+        "filter_style": "Filtrar per estil",
+        "select_style": "Seleccioni l'estil del menjar",
+        "filter_pref": "Filtrar per preferencies",
+        "select_pref": "Seleccioni les seves preferencies"
+    },
+
+    "tickets_page":
+    {
+        "no_tickets": "No hi ha tiquets encara",
+        "create": "Crear",
+        "inbox": "Safata d'Entrada",
+        "sent": "Enviats"
+    },
+
+    "food_tags":
+    {
+        "add": "Afegir Tag",
+        "italian": "Italià",
+        "asiatic": "Asiàtic",
+        "vegan": "Vegà",
+        "mexican": "Mexicà",
+        "pets": "Mascotes permeses",
+        "live": "Música en directe",
+        "kids": "Per a nens"
+    }
 }
