--- a/assets/i18n/ca.json
+++ b/assets/i18n/ca.json
@@ -4,6 +4,7 @@
     "done": "Fet",
     "update": "Actualitzar",
     "main_page": "Pàgina principal",
+    "cancel": "Cancelar",
 
     "app_bar":
     {
@@ -40,7 +41,8 @@
         },
         "notifications": "Notificacions",
         "logout": "Tancar Sessió",
-        "delete": "Eliminar Compte"
+        "delete": "Eliminar Compte",
+        "delete_confirm": "Està vosté segur que desitja eliminar el seu compte?"
     },
 
     "login_page":
