--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -4,6 +4,7 @@
     "done": "Done",
     "update": "Update",
     "main_page": "Main Page",
+    "cancel": "Cancel",
 
     "app_bar":
     {
@@ -40,7 +41,8 @@
         },
         "notifications": "Notifications",
         "logout": "Logout",
-        "delete": "Delete Account"
+        "delete": "Delete Account",
+        "delete_confirm": "Are you sure you want to delete your account?"
     },
 
     "login_page":
