--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -7,6 +7,7 @@
     "cancel": "Cancelar",
     "help": "Ayuda",
     "skip": "Omitir",
+    "empty": "Uno de los campos está vacío",
 
     "app_bar":
     {
@@ -44,18 +45,22 @@
         "notifications": "Notificaciones",
         "logout": "Cerrar Sessión",
         "delete": "Eliminar Cuenta",
-        "contact": "Contáctanos",
+        "contact": 
+        {
+            "title": "Contáctenos",
+            "sub_title": "Envíanos un mensaje"
+        },
         "delete_confirm": "Está usted seguro que desea eliminar su cuenta?",
         "help": 
         {
             "picture": "Edite su perfil: Si quiere cambiar su correo electrónico o su foto de perfil pulse aquí",
             "username": "Aquí puede observar su nombre de usuario, correo electrónico y el nombre de su cuenta",
             "dark_mode": "Cambie entre Modo Claro y Modo Oscuro, puede cambiar tantas veces como quiera",
-            "account_settings": "Here you can change your account preferences",
-            "notifications":  "",
-            "logout": "If you want to logout from your account click here",
-            "delete": "If you are not satisfied with the app or you are bored of using it, you can always delete your personal information"
-            
+            "account_settings": "Aquí puede cambiar las preferencias de la cuenta",
+            "notifications":  "Configure los ajustes de las notificaciones",
+            "logout": "Si quiere cerrar la sessión pulse aquí",
+            "delete": "En caso no este satisfecho con la aplicación o ya no le ve un uso, puede eliminar su información personal",
+            "contact": "Tiene alguna pregunta, problema u opinión? Déjenosla saber enviando un correo"
         }
     },
 
@@ -108,6 +113,20 @@
         "create": "Crear",
         "inbox": "Bandeja de Entrada",
         "sent": "Enviados"
+    },
+
+    "email_page":
+    {
+        "title": "Enviar Correo",
+        "write": "Escríbenos tu opinión/duda",
+        "to": "Para",
+        "subject": "Asunto",
+        "my_subject": "Mi Asunto",
+        "message": "Mensaje",
+        "my_message": "Mi Mensaje",
+        "send": "Enviar",
+        "open": "Abriendo aplicación de correo",
+        "failed": "Parece ser que no tiene ninguna aplicación de correo instalada"
     },
 
     "food_tags":
