--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -104,7 +104,8 @@
         "filter_style": "Filter by style",
         "select_style": "Select the style of food",
         "filter_pref": "Filter by preferences",
-        "select_pref": "Select your preferences"
+        "select_pref": "Select your preferences",
+        "make_res": "Make reservation"
     },
 
     "tickets_page":
