live occupation functionality added

--- a/assets/i18n/ca.json
+++ b/assets/i18n/ca.json
@@ -8,10 +8,12 @@
     "help": "Ajuda",
     "skip": "Ometre",
     "empty": "Un dels camps és buit",
+    "rating": "Puntuació",
+    "occupation": "Occupació",
 
     "app_bar":
     {
-        "title": "Ajusts del Compte"
+        "title": "Ajustaments del Compte"
     },
 
     "nav_bar":
@@ -39,7 +41,7 @@
         "configuration": "CONFIGURACIÓ",
         "account_settings": 
         {
-            "title": "Ajusts del Compte",
+            "title": "Ajustaments del Compte",
             "sub_title": "Idioma"
         },
         "notifications": "Notificacions",
@@ -57,7 +59,7 @@
             "username": "Aquí pot observar el seu nom d'usuari, correu electrònic i el nom del seu compte",
             "dark_mode": "Canviï entre Mode Clar i Mode Fosc, pot canviar tants cops com vulgui",
             "account_settings": "Aquí pot canviar les preferències del compte",
-            "notifications":  "Configuri els ajusts de les notificacions",
+            "notifications":  "Configuri els ajustaments de les notificacions",
             "logout": "Si desitja tancar la sessió pulsi aquí",
             "delete": "En cas de no estar satisfet amb l'aplicació o si ja no li veu cap ús, pot eliminar la seva informació personal",
             "contact": "Té algun dubte, problema o opinió? Deixi'ns-ho saber enviant un correu"
@@ -130,6 +132,48 @@
         "failed": "Sembla que no té cap aplicació de correu instal·lada"
     },
 
+    "stats_page": 
+    {
+        "title": "Estadístiques",
+        "month": "Mes",
+        "year": "Any",
+        "months":
+        {
+            "Jan": "Gener",
+            "Feb": "Febrer",
+            "Mar": "Març",
+            "Apr": "Abril",
+            "May": "Maig",
+            "Jun": "Juny",
+            "Jul": "Juliol",
+            "Aug": "Agost",
+            "Sep": "Setembre",
+            "Oct": "Octubre",
+            "Nov": "Novembre",
+            "Dec": "Desembre"
+        },
+        "months_ab":
+        {
+            "Jan": "Gen",
+            "Feb": "Feb",
+            "Mar": "Mar",
+            "Apr": "Abr",
+            "May": "Mai",
+            "Jun": "Jun",
+            "Jul": "Jul",
+            "Aug": "Ago",
+            "Sep": "Set",
+            "Oct": "Oct",
+            "Nov": "Nov",
+            "Dec": "Des"
+        }
+    },
+
+    "info_owner": 
+    {
+        "add": "Actualitzi els clientes que entren/surten"
+    },
+
     "food_tags":
     {
         "add": "Afegir Tag",
@@ -140,5 +184,5 @@
         "pets": "Mascotes permeses",
         "live": "Música en directe",
         "kids": "Per a nens"
-    }
+    } 
 }
