--- a/assets/i18n/ca.json
+++ b/assets/i18n/ca.json
@@ -22,7 +22,8 @@
         "chat": "Xat",
         "agenda": "Agenda",
         "profile": "Perfil",
-        "home": "Casa"
+        "home": "Casa",
+        "call": "Trucades"
     },
 
     "language":
