--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -22,7 +22,8 @@
         "chat": "Chat",
         "agenda": "Agenda",
         "profile": "Perfil",
-        "home": "Casa"
+        "home": "Casa",
+        "call": "Llamadas"
     },
 
     "language": 
