--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -22,7 +22,8 @@
         "chat": "Chat",
         "agenda": "Agenda",
         "profile": "Profile",
-        "home": "Home"
+        "home": "Home",
+        "call": "Calls"
     },
 
     "language": 
